# SoC_Project_4

./: .gitignore
section_1/part_a/: Makefile  output_frame.ppm  producer.h
section_1/part_b/: Makefile  bit_ops.h  consumer.h  output_frame_two.ppm  producer.h  router.h  sc_main.cpp  soc_sim
section_2/demos/: blur.cpp  lines.cpp
section_2/task_1/: CMakeLists.txt  Makefile  main.cpp
section_2/task_2/: CMakeLists.txt  Makefile  edge_Zumbrum.cpp
section_2/task_3/: CMakeLists.txt  Makefile
section_2/task_3/src/: consumer.h  memory.h  producer.h  sc_main.cpp
